HttpParser.d

#line 1 "HttpParser.rl"
/**
 * Copyright (c) 2005 Zed A. Shaw
 * You can redistribute it and/or modify it under the same terms as Ruby.
 *
 * Copyright (c) 2012 by Michael Neumann (mneumann@ntecs.de)
 */

// compile with ragel -G2 -D ...

import std.stdio;

/** Machine **/


#line 81 "HttpParser.rl"


/** Data **/

#line 23 "HttpParser.d"
static const int http_parser_start = 1;
static const int http_parser_first_final = 89;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;


#line 85 "HttpParser.rl"

alias uint BytePos;

struct BytePosRange {
  this(BytePos f, BytePos t) { from = f; to = t; }
  BytePos from;
  BytePos to;
};

struct BytePosRange2 {
  this(BytePosRange _a, BytePosRange _b) { a = _a; b = _b; }
  BytePosRange a;
  BytePosRange b;
};

class HttpParser
{
  private int saved_cs;

  private BytePos mark;
  private BytePos mark_query;
  private BytePosRange field_name;

  private size_t nread;

  // dummy visitor 
  void on_request_uri(BytePosRange r) {}
  void on_fragment(BytePosRange r) {}
  void on_request_method(BytePosRange r) {}
  void on_http_version(BytePosRange r) {}
  void on_request_path(BytePosRange r) {}
  void on_query(BytePosRange r) {}
  void on_header_done(BytePosRange r) {}

  void on_field_accept(BytePosRange r) {}
  void on_field_accept_charset(BytePosRange r) {}
  void on_field_cookie(BytePosRange r) {}
  void on_field_date(BytePosRange r) {}
  void on_field(BytePosRange2 name_value) {}

  this()
  {
    int cs = 0;
    
#line 76 "HttpParser.d"
	{
	cs = http_parser_start;
	}

#line 129 "HttpParser.rl"
    saved_cs = cs;
  }

  size_t execute(const char buffer[])
  {
    assert(buffer.length > 0);

    // Ragel uses: cs, p, pe
    int cs = saved_cs;           // current ragel machine state
    const(char) *p = &buffer[0];        // pointer to start of data
    const(char) *pe = &buffer[$-1] + 1; // pointer to end of data

    
#line 95 "HttpParser.d"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 36u: goto tr0;
		case 95u: goto tr0;
		default: break;
	}
	if ( (*p) < 48u ) {
		if ( 45u <= (*p) && (*p) <= 46u )
			goto tr0;
	} else if ( (*p) > 57u ) {
		if ( 65u <= (*p) && (*p) <= 90u )
			goto tr0;
	} else
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 129 "HttpParser.d"
	switch( (*p) ) {
		case 32u: goto tr2;
		case 36u: goto st70;
		case 95u: goto st70;
		default: break;
	}
	if ( (*p) < 48u ) {
		if ( 45u <= (*p) && (*p) <= 46u )
			goto st70;
	} else if ( (*p) > 57u ) {
		if ( 65u <= (*p) && (*p) <= 90u )
			goto st70;
	} else
		goto st70;
	goto st0;
tr2:
#line 30 "HttpParser.rl"
	{ 
    on_request_method(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 155 "HttpParser.d"
	switch( (*p) ) {
		case 42u: goto tr4;
		case 43u: goto tr5;
		case 47u: goto tr6;
		case 58u: goto tr7;
		default: break;
	}
	if ( (*p) < 65u ) {
		if ( 45u <= (*p) && (*p) <= 57u )
			goto tr5;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr5;
	} else
		goto tr5;
	goto st0;
tr4:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 182 "HttpParser.d"
	switch( (*p) ) {
		case 32u: goto tr8;
		case 35u: goto tr9;
		default: break;
	}
	goto st0;
tr8:
#line 22 "HttpParser.rl"
	{
    on_request_uri(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st5;
tr78:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
#line 26 "HttpParser.rl"
	{
    on_fragment(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st5;
tr81:
#line 26 "HttpParser.rl"
	{
    on_fragment(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st5;
tr89:
#line 38 "HttpParser.rl"
	{
    on_request_path(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 22 "HttpParser.rl"
	{
    on_request_uri(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st5;
tr100:
#line 42 "HttpParser.rl"
	{ 
    mark_query = cast(BytePos)(p - buffer.ptr);
  }
#line 46 "HttpParser.rl"
	{
    on_query(BytePosRange(mark_query, cast(BytePos)(p - buffer.ptr)));
  }
#line 22 "HttpParser.rl"
	{
    on_request_uri(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st5;
tr104:
#line 46 "HttpParser.rl"
	{
    on_query(BytePosRange(mark_query, cast(BytePos)(p - buffer.ptr)));
  }
#line 22 "HttpParser.rl"
	{
    on_request_uri(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 249 "HttpParser.d"
	if ( (*p) == 72u )
		goto tr10;
	goto st0;
tr10:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 263 "HttpParser.d"
	if ( (*p) == 84u )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 84u )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 80u )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 47u )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 46u )
		goto st12;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st11;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 13u )
		goto tr18;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st13;
	goto st0;
tr18:
#line 34 "HttpParser.rl"
	{	
    on_http_version(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
	goto st14;
tr29:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr32:
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr49:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
#line 54 "HttpParser.rl"
	{
    on_field_accept_charset(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr52:
#line 54 "HttpParser.rl"
	{
    on_field_accept_charset(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr54:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
#line 50 "HttpParser.rl"
	{
    on_field_accept(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr57:
#line 50 "HttpParser.rl"
	{
    on_field_accept(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr65:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
#line 58 "HttpParser.rl"
	{
    on_field_cookie(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr68:
#line 58 "HttpParser.rl"
	{
    on_field_cookie(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr74:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
#line 62 "HttpParser.rl"
	{
    on_field_date(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
tr77:
#line 62 "HttpParser.rl"
	{
    on_field_date(BytePosRange(mark, cast(BytePos)(p - buffer.ptr)));
  }
#line 70 "HttpParser.rl"
	{
    on_field(BytePosRange2(field_name, BytePosRange(mark, cast(BytePos)(p - buffer.ptr))));
  }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 442 "HttpParser.d"
	if ( (*p) == 10u )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 13u: goto st16;
		case 33u: goto tr21;
		case 65u: goto tr22;
		case 67u: goto tr23;
		case 68u: goto tr24;
		case 97u: goto tr22;
		case 99u: goto tr23;
		case 100u: goto tr24;
		case 124u: goto tr21;
		case 126u: goto tr21;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto tr21;
		} else if ( (*p) >= 35u )
			goto tr21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 66u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto tr21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto tr21;
		} else
			goto tr21;
	} else
		goto tr21;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 10u )
		goto tr25;
	goto st0;
tr25:
#line 74 "HttpParser.rl"
	{
    on_header_done(BytePosRange(cast(BytePos)(p - buffer.ptr + 1), cast(BytePos)(buffer.length)));
    {p++; cs = 89; if (true) goto _out;}
  }
	goto st89;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
#line 499 "HttpParser.d"
	goto st0;
tr21:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 511 "HttpParser.d"
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
tr30:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st18;
tr27:
#line 66 "HttpParser.rl"
	{
    field_name = BytePosRange(mark, cast(BytePos)(p - buffer.ptr));
  }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 553 "HttpParser.d"
	switch( (*p) ) {
		case 13u: goto tr29;
		case 32u: goto tr30;
		default: break;
	}
	goto tr28;
tr28:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 570 "HttpParser.d"
	if ( (*p) == 13u )
		goto tr32;
	goto st19;
tr22:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 584 "HttpParser.d"
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 67u: goto st21;
		case 99u: goto st21;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 67u: goto st22;
		case 99u: goto st22;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 69u: goto st23;
		case 101u: goto st23;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 80u: goto st24;
		case 112u: goto st24;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 84u: goto st25;
		case 116u: goto st25;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 33u: goto st17;
		case 45u: goto st26;
		case 46u: goto st17;
		case 58u: goto tr39;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 48u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 57u ) {
		if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else if ( (*p) >= 65u )
			goto st17;
	} else
		goto st17;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 67u: goto st27;
		case 99u: goto st27;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 72u: goto st28;
		case 104u: goto st28;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 65u: goto st29;
		case 97u: goto st29;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 66u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 82u: goto st30;
		case 114u: goto st30;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 83u: goto st31;
		case 115u: goto st31;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 69u: goto st32;
		case 101u: goto st32;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 84u: goto st33;
		case 116u: goto st33;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr47;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
tr50:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st34;
tr47:
#line 66 "HttpParser.rl"
	{
    field_name = BytePosRange(mark, cast(BytePos)(p - buffer.ptr));
  }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 1026 "HttpParser.d"
	switch( (*p) ) {
		case 13u: goto tr49;
		case 32u: goto tr50;
		default: break;
	}
	goto tr48;
tr48:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 1043 "HttpParser.d"
	if ( (*p) == 13u )
		goto tr52;
	goto st35;
tr55:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st36;
tr39:
#line 66 "HttpParser.rl"
	{
    field_name = BytePosRange(mark, cast(BytePos)(p - buffer.ptr));
  }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 1063 "HttpParser.d"
	switch( (*p) ) {
		case 13u: goto tr54;
		case 32u: goto tr55;
		default: break;
	}
	goto tr53;
tr53:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 1080 "HttpParser.d"
	if ( (*p) == 13u )
		goto tr57;
	goto st37;
tr23:
#line 18 "HttpParser.rl"
	{
    mark = cast(BytePos)(p - buffer.ptr);
  }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 1094 "HttpParser.d"
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 79u: goto st39;
		case 111u: goto st39;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st17;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st17;
		} else
			goto st17;
	} else
		goto st17;
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 33u: goto st17;
		case 58u: goto tr27;
		case 79u: goto st40;
		case 111u: goto st40;
		case 124u: goto st17;
		case 126u: goto st17;
		default: break;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st17;
		} else if ( (*p) >= 35u )
			goto st17;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
